# mapreduce-cpp

./: .editorconfig  CMakeLists.txt  Makefile  README.md  design.md
common/: CMakeLists.txt
common/utils/: string_utils.cpp
include/common/utils/: string_utils.h
include/mapreduce/: engine.h  worker.h  worker_task.h
include/mapreduce/utils/: string_utils.h
master/: CMakeLists.txt  main.cpp  master.cpp  master.h  master_service.cpp  master_service.h  state.cpp  state.h
proto/: CMakeLists.txt  master.proto
scripts/: run.sh  run_master.sh  run_tests.sh  run_worker.sh  test.sh
src/: CMakeLists.txt  main.cpp
src/mapreduce/: engine.cpp  worker.cpp  worker_task.cpp
src/mapreduce/utils/: string_utils.cpp
tests/: CMakeLists.txt  test_mapper.cpp  test_worker.cpp
tests/common/utils/: test_string_utils.cpp
tests/utils/: test_string_utils.cpp
tests/worker/: test_worker.cpp
worker/: CMakeLists.txt  main.cpp  master_client.cpp  master_client.h  worker.cpp  worker.h  worker_task.cpp
